fix: scrolling in landscape on mobiles

--- a/src/components/Other/Other.scss
+++ b/src/components/Other/Other.scss
@@ -15,7 +15,6 @@
 
     @media (min-width: $small) {
         flex-flow: column nowrap;
-        justify-content: center;
     }
 
     @media (min-width: $x-large) {
