--- a/src/components/Technologies/Technologies.scss
+++ b/src/components/Technologies/Technologies.scss
@@ -13,7 +13,6 @@
 
     @media (min-width: $small) {
         flex-flow: column nowrap;
-        justify-content: center;
     }
 
     @media (min-width: $x-large) {
